# FCM

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main_window.ui
docs/: ~$ТЗ.docx  ТЗ.docx  Текст ВКР.docx
src/: main.cpp  resources.qrc
src/libs/qcustomplot/: customplot_wrapper.cpp
src/migrations/: 001-init.sql
src/model/: element_type.h  final_state_predictor.cpp  final_state_predictor.h  metrics_manager.cpp  metrics_manager.h  predictor.cpp  predictor.h
src/model/activation_functions/: activation_function.cpp  activation_function.h  bivalent.cpp  bivalent.h  fabric.cpp  fabric.h  sigmoid.cpp  sigmoid.h  tanh.cpp  tanh.h  threshold_linear.cpp  threshold_linear.h  trivalent.cpp  trivalent.h
src/model/algorithms/: algorithm.h  fabric.cpp  fabric.h  standard.cpp  standard.h  standard_fuzzy.cpp  standard_fuzzy.h  weights_prediction.cpp  weights_prediction.h  weights_prediction_fuzzy.cpp  weights_prediction_fuzzy.h
src/model/entities/: calculation_concept.h  calculation_fcm.h  calculation_weight.h  concept.h  experiment.h  fcm.h  term.h  triangular_fuzzy_value.cpp  triangular_fuzzy_value.h  weight.h
src/model/entities/helpers/: fcm_copy.cpp  fcm_copy.h
src/model/entities/templates/: template.h  template_concept.h  template_term.h  template_weight.h
src/model/fuzzy_logic/: fuzzifier.h  linear_fuzzifier.cpp  linear_fuzzifier.h  numeric_fuzzifier.cpp  numeric_fuzzifier.h
src/model/join/: mode.h  models_joiner.cpp  models_joiner.h
src/model/metrics/: fabric.cpp  fabric.h  mae.cpp  mae.h  mape.cpp  mape.h  metric.h  mse.cpp  mse.h
src/model/sensitivity_analysis/: parameters.h  sensitivity_analizer.cpp  sensitivity_analizer.h
src/model/sensitivity_analysis/change_iteration/: abstract.h  fabric.cpp  fabric.h  fuzzy.cpp  fuzzy.h  numeric.cpp  numeric.h  range.cpp  range.h
src/model/static_analysis/: fuzzy_static_analyzer.cpp  fuzzy_static_analyzer.h  result.h  static_analyzer.cpp  static_analyzer.h
src/model/stop_conditions/: fabric.cpp  fabric.h  fixed_steps.cpp  fixed_steps.h  static.cpp  static.h  stop_condition.h
src/presenter/: creation_presenter.cpp  creation_presenter.h  element_window_mode.h  graph_presenter.cpp  graph_presenter.h  prediction_parameters.h  scene_presenter.h  sensitivity_presenter.cpp  sensitivity_presenter.h  simulation_parameters.h  simulation_presenter.cpp  simulation_presenter.h  static_analysis_presenter.cpp  static_analysis_presenter.h
src/repository/: json_repository.cpp  json_repository.h  migration_manager.cpp  migration_manager.h  models_repository.cpp  models_repository.h  saving_manager.cpp  saving_manager.h  templates_manager.cpp  templates_manager.h  templates_repository.cpp  templates_repository.h
src/ui/adjacency_table/: adjacency_table_view.cpp  adjacency_table_view.h
src/ui/concept_window/: concept_window.cpp  concept_window.h  concept_window.ui
src/ui/graph_editor/: edge_item.cpp  edge_item.h  edit_mode.h  graph_scene.cpp  graph_scene.h  graph_view.cpp  graph_view.h  node_item.cpp  node_item.h
src/ui/graph_editor/color_value_adapter/: IColorValueAdapter.h  color_value_adapter.cpp  color_value_adapter.h  linear_approximation_adapter.cpp  linear_approximation_adapter.h
src/ui/help/: help_browser.cpp  help_browser.h  help_window.cpp  help_window.h  help_window.ui
src/ui/help/en/: adjacency_matrix_creation.html  experiments.html  fcm_switching.html  graph_creation.html  help.qhp  join.html  model_settings.html  saving_export_import.html  sensitivity.html  settings.html  simulation.html  static_analysis.html
src/ui/help/ru/: adjacency_matrix_creation.html  experiments.html  fcm_switching.html  graph_creation.html  help.qhp  join.html  model_settings.html  saving_export_import.html  sensitivity.html  settings.html  simulation.html  static_analysis.html
src/ui/join_window/: group_type.h  join_window.cpp  join_window.h  join_window.ui  selection_mode.h
src/ui/load_model_window/: load_model_window.cpp  load_model_window.h  load_model_window.ui
src/ui/main_window/: main_window.cpp  main_window.h  main_window.ui
src/ui/main_window/term_list/: term_list_item.h
src/ui/markdown_edit/: markdown_edit.cpp  markdown_edit.h
src/ui/save_as_window/: save_as_window.cpp  save_as_window.h  save_as_window.ui
src/ui/save_current_state_window/: save_current_state_window.cpp  save_current_state_window.h  save_current_state_window.ui
src/ui/tooltips/: controller.cpp  controller.h
src/ui/weight_window/: weight_window.cpp  weight_window.h  weight_window.ui
tests/: CMakeLists.txt
tests/ui/: CMakeLists.txt  example_qt_ui_test.cpp
tests/unit/: CMakeLists.txt
tests/unit/activation_functions/: activation_function_test.cpp  bivalent_test.cpp  fabric_test.cpp  sigmoid_test.cpp  tanh_test.cpp  threshold_linear_test.cpp  trivalent_test.cpp
tests/unit/algorithms/: fabric_test.cpp  standard_fuzzy_test.cpp  standard_test.cpp  test_utils.h  weights_prediction_fuzzy_test.cpp  weights_prediction_test.cpp
tests/unit/entities/: triangular_fuzzy_value_test.cpp
tests/unit/metrics/: fabric_test.cpp  mae_test.cpp  mape_test.cpp  mse_test.cpp
translations/: FCM_ru_RU.ts
